--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -28,19 +28,19 @@
     <a href="index.html"><img src="images/logo.png" alt="Image"></a>
     <ul>
       <li class="current">
-        <a href="index.html">Home</a>
+        <a href="#index">Home</a>
       </li>
       <li>
-        <a href="menu.html">Menu</a>
+        <a href="#menu">Menu</a>
       </li>
       <li>
-        <a href="locations.html">Locations</a>
+        <a href="#locations">Locations</a>
       </li>
       <li>
-        <a href="blog.html">Blog</a>
+        <a href="#blog">Blog</a>
       </li>
       <li>
-        <a href="about.html">About Us</a>
+        <a href="#about">About Us</a>
       </li>
     </ul>
   </div>
@@ -57,25 +57,7 @@
         © Yay!Koffee 2011.<br>All Rights Reserved.
       </p>
     </div>
-    <div class="section">
-      <ul>
-        <li class="current">
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="menu.html">Menu</a>
-        </li>
-        <li>
-          <a href="locations.html">Locations</a>
-        </li>
-        <li>
-          <a href="blog.html">Blog</a>
-        </li>
-        <li>
-          <a href="about.html">About Us</a>
-        </li>
-      </ul>
-      <div id="connect">
+        <div id="connect">
         <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" id="facebook">Facebook</a>
         <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" id="twitter">Twitter</a>
         <a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" id="googleplus">Google+</a>
