added css for lcoations

--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -19,6 +19,7 @@
 
 
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' href='/stylesheets/locations.css' />
   <!-- Loading the AngularJS file from /public/angularJS folder -->
   <script src="angularjs/StarbucksApp.js"></script>
 </head>
