--- a/Starbucks/public/templates/locations.html
+++ b/Starbucks/public/templates/locations.html
@@ -1,6 +1,43 @@
 <!-- about.html -->
 <div>
-	<h1>About Page</h1>
+	<h1>Choose a location..</h1>
 
-
+	<div>
+		<p><b>
+			1. Starbucks
+		Santana Row
+		3.1 mi · San Jose, CA
+		(408) 241-3877
+		Open until 11:00 PM
+		</b></p>
+		<p><b>2. Starbucks
+			San Jose Market Center
+			4.4 mi · San Jose, CA
+			(408) 293-2362
+			Open until 11:00 PM
+		</b></p>
+		<p><b>3. SStarbucks
+			Westfield Valley Fair
+			3.2 mi · Santa Clara, CA
+			(408) 983-0804
+			Closing soon: 10:00 PM
+		</b></p>
+	</div>
+	<div id="map"></div>
+	<script>
+        function initMap() {
+            var uluru = {lat: 37.3382, lng: 121.8863};
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 4,
+                center: uluru
+            });
+            var marker = new google.maps.Marker({
+                position: uluru,
+                map: map
+            });
+        }
+	</script>
+	<script async defer
+			src="https://maps.googleapis.com/maps/api/js?key=API&callback=initMap">
+	</script>
 </div>
