updated home page

--- a/Starbucks/public/templates/index.html
+++ b/Starbucks/public/templates/index.html
@@ -1,7 +1,7 @@
 <div id="body">
 	<div id="figure">
 		<img src="images/headline-home.jpg" alt="Image">
-		<span id="home">Maecenas pharetra hendrerit eros sed laoreet. <a href="index.html">Find out why.</a></span>
+		<span id="home">The best coffee for the best You
 	</div>
 	<div id="featured">
 		<span class="whatshot"><a href="menu.html">Find out more</a></span>
@@ -11,7 +11,7 @@
 			<a href="menu.html"><img src="images/coffee3.jpg" alt="Image"></a>
 		</div>
 	</div>
-	<div class="section">
+	<!--<div class="section">
 		<ul>
 			<li>
 				<a href="blog.html"><img src="images/coffee-ingredients.jpg" alt="Image"></a>
@@ -58,5 +58,5 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+	</div>-->
 </div>
