--- a/Starbucks/public/stylesheets/style.css
+++ b/Starbucks/public/stylesheets/style.css
@@ -256,10 +256,10 @@ p a:hover {
 	background: url(../images/bg-find-out2-hover.png) repeat;
 }
 #page div div#body div a.about {
-	background: url(../images/about.jpg) no-repeat left top;
+	background: url(../images/about_.jpg) no-repeat left top;
 }
 #page div div#body div a.locations {
-	background: url(../images/locations.jpg) no-repeat left top;
+	background: url(../images/Starbucks_logo_2.png) no-repeat left top;
 }
 #page div div#body div a.whatshot {
 	background: url(../images/whats-hot2.jpg) no-repeat left top;
