--- a/Starbucks/public/templates/locations.html
+++ b/Starbucks/public/templates/locations.html
@@ -23,21 +23,39 @@
 			Closing soon: 10:00 PM
 		</b></p>
 	</div>
-	<div id="map"></div>
+<!--	<div id="map" style='height:400px;width:520px;'></div>
 	<script>
         function initMap() {
-            var uluru = {lat: 37.3382, lng: 121.8863};
+            /*var san_jose = new google.maps.LatLng(37.3382,-121.8863);//,{lat: 37.3382, lng: 121.8863};
             var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 4,
-                center: uluru
+                center: san_jose
             });
-            var marker = new google.maps.Marker({
-                position: uluru,
-                map: map
-            });
+
         }
-	</script>
+*/
+
+        var myOptions =
+            {zoom:12,
+                center:new google.maps.LatLng(37.18975980400773,-121.70529999999997),
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+        map = new google.maps.Map(document.getElementById('map'), myOptions);
+        marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.18975980400773,-121.70529999999997)});
+
+        infowindow = new google.maps.InfoWindow({content:'<strong></strong><br><br>95192 San Jose<br>'});
+        google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});
+        infowindow.open(map,marker);
+        }
+
+	</script>-->
+	<div style='overflow:hidden;height:400px;width:520px;'>
+		<div id='gmap_canvas' style='height:400px;width:520px;'></div>
+		<style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div>
+	<script type='text/javascript'>function init_map(){
+	    var myOptions = {zoom:12,center:new google.maps.LatLng(37.18975980400773,-121.70529999999997),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.18975980400773,-121.70529999999997)});infowindow = new google.maps.InfoWindow({content:'<strong></strong><br><br>95192 San Jose<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+
 	<script async defer
-			src="https://maps.googleapis.com/maps/api/js?key=API&callback=initMap">
+			src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyADkXIFtiBnx_G3dFpJoGIx48g9C94bZfQ&callback=initMap">
 	</script>
 </div>
