--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -26,8 +26,8 @@
 <div id="page"  ng-app="StarbucksApp">
 
   <div id="header">
-    <a href="index.html"><img src="images/logo.png" alt="Image"></a>
-    <ul>
+    <a href="index.html"><img src="images/Starbucks_logo_2.png" alt="Image"></a>
+    <ul >
       <li class="current">
         <a href="#index">Home</a>
       </li>
@@ -53,9 +53,9 @@
 
   <div id="footer">
     <div>
-      <a href="index.html"><img src="images/logo2.png" alt="Image"></a>
+      <a href="index.html"><img src="images/Starbucks_logo_2.png" alt="Image"></a>
       <p class="footnote">
-        © Yay!Koffee 2011.<br>All Rights Reserved.
+        © Starbucks 2011.<br>All Rights Reserved.
       </p>
     </div>
         <div id="connect">
