--- a/Starbucks/public/templates/index.html
+++ b/Starbucks/public/templates/index.html
@@ -4,7 +4,7 @@
 		<span id="home">The best coffee for the best You
 	</div>
 	<div id="featured">
-		<span class="whatshot"><a href="menu.html">Find out more</a></span>
+		<span class="whatshot"></span>
 		<div>
 			<a href="menu.html"><img src="images/coffee1.jpg" alt="Image"></a>
 			<a href="menu.html"><img src="images/coffee2.jpg" alt="Image"></a>
