--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -15,60 +15,36 @@
   <link rel="stylesheet" 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
-
-
-
-  <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='/stylesheets/locations.css' />
+  <link rel='stylesheet' href='/stylesheets/menu.css' />
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   <!-- Loading the AngularJS file from /public/angularJS folder -->
   <script src="angularjs/StarbucksApp.js"></script>
 </head>
-<div id="page"  ng-app="StarbucksApp">
 
+<div id="page"  ng-app="StarbucksApp">
+<div>
   <div id="header">
     <a href="index.html"><img src="images/Starbucks_logo_2.png" alt="Image"></a>
-    <ul >
+    <ul>
       <li class="current">
         <a href="#index">Home</a>
       </li>
       <li>
-        <a href="#menu">Menu</a>
+        <a href="#placeorder">Place Order</a>
       </li>
       <li>
-        <a href="#locations">Locations</a>
-      </li>
-      <li>
-        <a href="#blog">Blog</a>
+        <a href="#checkstatus">Check Status</a>
       </li>
       <li>
         <a href="#about">About Us</a>
       </li>
     </ul>
   </div>
-
+</div>
   <!-- angular templating -->
   <!-- this is where content will be injected -->
   <div ng-view></div>
 
-
-  <div id="footer">
-    <div>
-      <a href="index.html"><img src="images/Starbucks_logo_2.png" alt="Image"></a>
-      <p class="footnote">
-        © Starbucks 2011.<br>All Rights Reserved.
-      </p>
-    </div>
-        <div id="connect">
-        <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" id="facebook">Facebook</a>
-        <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" id="twitter">Twitter</a>
-        <a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" id="googleplus">Google+</a>
-        <a href="index.html" id="rss">RSS</a>
-      </div>
-      <p>
-        This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forums</a>.
-      </p>
-    </div>
-  </div>
-
-</div>
+ </div>
 </html>
