--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -36,6 +36,12 @@
       <li>
         <a href="#checkstatus">Check Status</a>
       </li>
+       <li>
+              <a href="#checkstatus">Update Order</a>
+      </li>
+       <li>
+              <a href="#checkstatus">Check Status</a>
+       </li>
       <li>
         <a href="#about">About Us</a>
       </li>
