--- a/Starbucks/public/templates/checkstatus.html
+++ b/Starbucks/public/templates/checkstatus.html
@@ -1,5 +1,26 @@
+<link rel='stylesheet' href='/stylesheets/placeorder.css' />
+<div>
+    <h1></h1>
+    <form>
+        <ul class="form-style-1">
+            <li>
+                <label>Order ID <span class="required">*</span></label>
+                <input type="text" name="orderid" class="field-long" />
+            </li>
+            <li>
+                <label>Your order status <span class="required">*</span></label>
+                <input type="text" readonly="readonly" name="orderstatus" class="field-long" />
+            </li>
+            <li>
+                <button ng-click = "placeOrder()">Check Status</button>
+            </li>
+        </ul>
+    </form>
+</div>
+
+<!--
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css"/>
-<link rel='stylesheet' href='/checkstatus/locations.css' />
+<link rel='stylesheet' href='/stylesheets/checkstatus.css' />
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
 <div>
     <h1> </h1>
@@ -28,4 +49,4 @@
         </form>
     </div>
 </div>
-</div>
+</div>-->
