adding milk options

--- a/Starbucks/public/templates/placeorder.html
+++ b/Starbucks/public/templates/placeorder.html
@@ -62,6 +62,17 @@
         </select>
         </label>
             </li>
+        
+         <li>
+        <label>
+            Milk :
+        <select ng-model="milk" class="field-select">
+            <option>Whole</option>
+            <option>Almond</option>
+            <option>2%</option>
+        </select>
+        </label>
+            </li>
 
             <li>
         <label>
