update order changes

--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -37,7 +37,7 @@
         <a href="#checkstatus">Check Status</a>
       </li>
        <li>
-              <a href="#checkstatus">Update Order</a>
+              <a href="#updateorder">Update Order</a>
       </li>
        <li>
               <a href="#checkstatus">Check Status</a>
