--- a/Starbucks/public/templates/index.html
+++ b/Starbucks/public/templates/index.html
@@ -6,9 +6,8 @@
 	<div id="featured">
 		<span class="whatshot"></span>
 		<div>
-			<a href="menu.html"><img src="images/coffee1.jpg" alt="Image"></a>
-			<a href="menu.html"><img src="images/coffee2.jpg" alt="Image"></a>
-			<a href="menu.html"><img src="images/coffee3.jpg" alt="Image"></a>
+			<a href="menu.html"><img src="images/coffee1.png" alt="Image" height="450" width="700"></a>
+			
 		</div>
 	</div>
 
