About page changes

--- a/Starbucks/public/templates/about.html
+++ b/Starbucks/public/templates/about.html
@@ -1,6 +1,16 @@
 <!-- about.html -->
-<div>
-	<h1>About Page</h1>
-
-
+<style>
+h2 {
+    color: #d5b084;
+    font-family: verdana;
+    font-size: 300%;
+    text-align: center;
+}
+</style>
+<div id="body">
+				<div id="figure">				
+					<h2>Meet the Team</h2>
+				</div>
+				<center><img src="images/team.png" alt="Image"  width="850"></center>
+				
 </div>
