--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -40,7 +40,7 @@
               <a href="#updateorder">Update Order</a>
       </li>
        <li>
-              <a href="#checkstatus">Cancel Order</a>
+              <a href="#cancelorder">Cancel Order</a>
        </li>
       <li>
         <a href="#about">About Us</a>
