pay order changes

--- a/Starbucks/public/templates/placeorder.html
+++ b/Starbucks/public/templates/placeorder.html
@@ -35,6 +35,7 @@
         });
 
     });
+
 </script>
 <div>
     <h1> </h1>
@@ -44,8 +45,8 @@
          <li>
         <label>
             Drinks :
-        <select ng-model="drink" class="field-select">
-            <option>Capachino</option>
+        <select ng-model="drink" class="field-select" id="drink">
+            <option>Cappucino</option>
             <option>Mocha</option>
             <option>Latte</option>
             <option>Expresso</option>
@@ -55,7 +56,7 @@
             <li>
         <label>
             Size :
-        <select ng-model="size" class="field-select">
+        <select ng-model="size" class="field-select" id="size">
             <option>Small</option>
             <option>Medium</option>
             <option>Large</option>
@@ -66,7 +67,7 @@
          <li>
         <label>
             Milk :
-        <select ng-model="milk" class="field-select">
+        <select ng-model="milk" class="field-select" id="milk">
             <option>Whole</option>
             <option>Almond</option>
             <option>2%</option>
@@ -88,7 +89,7 @@
             <li>
         <label>
             Quantity :
-        <select ng-model="qty" class="field-select">
+        <select ng-model="qty" class="field-select" id="qty">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
