--- a/Starbucks/public/templates/updateorder.html
+++ b/Starbucks/public/templates/updateorder.html
@@ -55,7 +55,7 @@
             
             
             <li>
-                <button ng-click = "placeOrder()">Check Status</button>
+                <button ng-click = "placeOrder()">Update Order</button>
             </li>
         </ul>
     </form>
