--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -43,7 +43,7 @@
               <a href="#checkstatus">Check Status</a>
        </li>
       <li>
-        <a href="#about">About Us</a>
+        <a href="#payorder">Pay</a>
       </li>
     </ul>
   </div>
