--- a/Starbucks/public/templates/updateorder.html
+++ b/Starbucks/public/templates/updateorder.html
@@ -6,6 +6,11 @@
             <li>
                 <label>Order ID <span class="required">*</span></label>
                 <input type="text" name="orderid" class="field-long" />
+
+            </li>
+
+            <li>
+                <button ng-click="getOrder()" style="width: 30%" title="Get order details to update">Get Order</button>
             </li>
             
             <li>
@@ -55,41 +60,13 @@
             
             
             <li>
-                <button ng-click = "placeOrder()">Update Order</button>
+                <button ng-disabled = "isUpdateDisabled" style="width: 30%"  ng-click = "placeOrder()" title="Disabled if order update not allowed">Update Order</button>
+            </li>
+
+            <li>
+                <label ng-model="msg"></label>
             </li>
         </ul>
     </form>
 </div>
 
-<!--
-<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css"/>
-<link rel='stylesheet' href='/stylesheets/checkstatus.css' />
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
-<div>
-    <h1> </h1>
-<div class="container">
-    <div class="row">
-        <form role="form" id="contact-form" class="contact-form">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="Order ID" autocomplete="off" id="orderid" placeholder="Order ID">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="form-control" placeholder="Status">Status</label>
-                        <input type="email" class="form-control" name="email" autocomplete="off" id="email" placeholder="here is the status..">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <button type="submit" class="btn main-btn pull-right">Check Status</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-</div>-->
