--- a/Starbucks/public/templates/checkstatus.html
+++ b/Starbucks/public/templates/checkstatus.html
@@ -1,19 +1,22 @@
 <link rel='stylesheet' href='/stylesheets/placeorder.css' />
-<div>
+<div >
     <h1></h1>
     <form>
         <ul class="form-style-1">
             <li>
                 <label>Order ID <span class="required">*</span></label>
-                <input type="text" name="orderid" class="field-long" />
+                <input type="text" name="orderid" class="field-long" ng-model="orderId" />
             </li>
             <li>
                 <label>Your order status <span class="required">*</span></label>
-                <input type="text" readonly="readonly" name="orderstatus" class="field-long" />
+                <input type="text" readonly="readonly" name="orderstatus" class="field-long" ng-model="status" />
             </li>
             
             <li>
-                <button ng-click = "placeOrder()">Check Status</button>
+                <button style="width: 30%"  ng-click = "checkStatus()">Check Status</button>
+            </li>
+            <li>
+                <label ng-model="msg"></label>
             </li>
         </ul>
     </form>
