--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -18,13 +18,20 @@
   <link rel="stylesheet" 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
+  <link rel="stylesheet"; href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
+  <script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
 
   <link rel='stylesheet' href='/stylesheets/locations.css' />
   <link rel='stylesheet' href='/stylesheets/menu.css' />
   <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   <!-- Loading the AngularJS file from /public/angularJS folder -->
-  <script src="angularjs/placeorder.js"></script>
+
+
+    <script src="angularjs/checkstatus.js"></script>
   <script src="angularjs/StarbucksApp.js"></script>
+
+  <!--  <script src="angularjs/placeorder.js"></script>
+    <script src="angularjs/checkstatus.js"></script>-->
 
 
 </head>
