orderlist wth smart table

--- a/Starbucks/public/stylesheets/style.css
+++ b/Starbucks/public/stylesheets/style.css
@@ -54,6 +54,7 @@ p a:hover {
 	background: #f5f1e6;
 	padding: 0;
 	width: 940px;
+	/*width: 1050px;*/
 }
 #page div div#header {
 	background: none;
