--- a/Starbucks/views/index.ejs
+++ b/Starbucks/views/index.ejs
@@ -57,6 +57,9 @@
       <li>
         <a href="#payorder">Pay</a>
       </li>
+     <!-- <li>
+        <a href="#listOrders">View Orders</a>
+      </li>-->
     </ul>
   </div>
 </div>
