changes in UI for all other calls

--- a/Starbucks/public/templates/cancelorder.html
+++ b/Starbucks/public/templates/cancelorder.html
@@ -15,7 +15,7 @@
             </li>
             <li>
                 <label>Order ID <span class="required">*</span></label>
-                <input type="text" ng-model="orderid" class="field-long" />
+                <input type="text" ng-model="orderId" class="field-long" />
             </li>
             <li>
                 <label>Your order status <span class="required">*</span></label>
