--- a/Starbucks/public/templates/payorder.html
+++ b/Starbucks/public/templates/payorder.html
@@ -17,13 +17,13 @@
             </li>
          <li>
                 <label>Order ID <span class="required">*</span></label>
-                <input type="text" name="orderid" class="field-long" />
+                <input type="text" name="orderid" class="field-long" ng-model="orderId"/>
             </li>
 
                  
 
             <li>
-            <button style="width: 30%"  ng-click = "coffeePrice()">Pay</button>
+            <button style="width: 30%"  ng-click = "payOrder()">Pay</button>
             </li>
 
             <li>
