--- a/Starbucks/public/templates/placeorder.html
+++ b/Starbucks/public/templates/placeorder.html
@@ -11,7 +11,7 @@
          <li>
         <label>
             Drinks :
-        <select ng-model="drink" class="field-select" id="drink">
+        <select ng-model="drink" class="field-select" required=true id="drink">
             <option>Cappucino</option>
             <option>Mocha</option>
             <option>Latte</option>
@@ -22,7 +22,7 @@
             <li>
         <label>
             Size :
-        <select ng-model="size" class="field-select" id="size">
+        <select ng-model="size" class="field-select" required=true id="size">
             <option>Small</option>
             <option>Medium</option>
             <option>Large</option>
@@ -33,7 +33,7 @@
          <li>
         <label>
             Milk :
-        <select ng-model="milk" class="field-select" id="milk">
+        <select ng-model="milk" class="field-select" required=true id="milk">
             <option>Whole</option>
             <option>Almond</option>
             <option>2%</option>
@@ -44,7 +44,7 @@
             <li>
         <label>
             Location :
-        <select ng-model="location" class="field-select"">
+        <select ng-model="location" class="field-select" required=true >
                 <option>Starbucks :  Santana Row</option>
                 <option>Starbucks :  San Jose Market Center</option>
                 <option>Starbucks :  Westfield Valley Fair</option>
@@ -55,7 +55,7 @@
             <li>
         <label>
             Quantity :
-        <select ng-model="qty" class="field-select" id="qty">
+        <select ng-model="qty" class="field-select" id="qty" required=true>
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
