--- a/Starbucks/public/templates/updateorder.html
+++ b/Starbucks/public/templates/updateorder.html
@@ -15,13 +15,13 @@
             </li>
             <li>
                 <label>Order ID <span class="required">*</span></label>
-                <input type="text" name="orderid" class="field-long" />
+                <input type="text" name="orderid" class="field-long" ng-model="orderId"/>
 
             </li>
 
-            <li>
+          <!--  <li>
                 <button ng-click="getOrder()" style="width: 30%" title="Get order details to update">Get Order</button>
-            </li>
+            </li>-->
             
             <li>
             <label>
@@ -70,7 +70,7 @@
             
             
             <li>
-                <button ng-disabled = "isUpdateDisabled" style="width: 30%"  ng-click = "placeOrder()" title="Disabled if order update not allowed">Update Order</button>
+                <button style="width: 30%"  ng-click = "updateOrder()" title="Order update">Update Order</button>
             </li>
 
             <li>
