updated status msg

--- a/Starbucks/public/templates/cancelorder.html
+++ b/Starbucks/public/templates/cancelorder.html
@@ -4,6 +4,9 @@
     <form>
         <ul class="form-style-1">
             <li>
+                <label ng-model="msg"> <span class="required"></span>{{msg}}</label>
+            </li>
+            <li>
                 <label>
                     Location :
                     <select ng-model="location" class="field-select"">
