--- a/Starbucks/public/templates/placeorder.html
+++ b/Starbucks/public/templates/placeorder.html
@@ -6,7 +6,7 @@
     <form name="form1" class="form-style-9">
         <ul class="form-style-1">
             <li>
-                <label ng-model="msg"></label>
+                <label ng-model="msg"> <span class="required"></span>{{msg}}</label>
             </li>
          <li>
         <label>
