changed input json

--- a/Starbucks/public/templates/cancelorder.html
+++ b/Starbucks/public/templates/cancelorder.html
@@ -22,7 +22,8 @@
             </li>
             <li>
                 <label>Your order status <span class="required">*</span></label>
-                <input type="text" readonly="readonly" ng-model="orderstatus" class="field-long" />
+                <label ng-model="orderstatus"> <span class="required"></span>{{orderstatus}}</label>
+               <!-- <input type="text" readonly="readonly" ng-model="orderstatus" class="field-long" />-->
             </li>
             
             <li>
