--- a/Starbucks/public/templates/checkstatus.html
+++ b/Starbucks/public/templates/checkstatus.html
@@ -22,7 +22,8 @@
             </li>
             <li>
                 <label>Your order status <span class="required">*</span></label>
-                <input type="text" readonly="readonly" name="orderstatus" class="field-long" ng-model="status" />
+                <label ng-model="status"> <span class="required"></span>{{status}}</label>
+                <!--<input type="text" readonly="readonly" name="orderstatus" class="field-long" ng-model="status" />-->
             </li>
             
             <li>
@@ -32,36 +33,3 @@
         </ul>
     </form>
 </div>
-
-<!--
-<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css"/>
-<link rel='stylesheet' href='/stylesheets/checkstatus.css' />
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
-<div>
-    <h1> </h1>
-<div class="container">
-    <div class="row">
-        <form role="form" id="contact-form" class="contact-form">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="Order ID" autocomplete="off" id="orderid" placeholder="Order ID">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="form-control" placeholder="Status">Status</label>
-                        <input type="email" class="form-control" name="email" autocomplete="off" id="email" placeholder="here is the status..">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <button type="submit" class="btn main-btn pull-right">Check Status</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-</div>-->
