changes to routing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,22 +40,22 @@
     <a href="index.html"><img src="images/Starbucks_logo_2.png" alt="Image"></a>
     <ul>
       <li class="current">
-        <a href="#index">Home</a>
+        <a href="/index">Home</a>
       </li>
       <li>
-        <a href="#placeorder">Place Order</a>
+        <a href="/placeorder">Place Order</a>
       </li>
       <li>
-        <a href="#checkstatus">Check Status</a>
+        <a href="/checkstatus">Check Status</a>
       </li>
        <li>
-         <a href="#updateorder">Update Order</a>
+         <a href="/updateorder">Update Order</a>
       </li>
        <li>
-         <a href="#cancelorder">Cancel Order</a>
+         <a href="/cancelorder">Cancel Order</a>
        </li>
       <li>
-        <a href="#payorder">Pay</a>
+        <a href="/payorder">Pay</a>
       </li>
      <!-- <li>
         <a href="#listOrders">View Orders</a>
