adding / in routes/home.ejs

--- a/routes/home.ejs
+++ b/routes/home.ejs
@@ -30,11 +30,11 @@
 	<nav class="{{active}}" ng-click="$event.preventDefault()">
 
 		<!-- When a link in the menu is clicked, we set the active variable -->
-		<a href="home" class="home" ng-click="active='home'">Home</a>
-		<a href="placeorder" class="placeorder" ng-click="active='placeorder'">Place Order</a>
-		<a href="checkstatus" class="projects" ng-click="active='projects'">Check Status</a>
-		<a href="updateorder" class="services" ng-click="active='services'">Update Order</a>
-		<a href="payorder" class="contact" ng-click="active='contact'">Pay</a>
+		<a href="/home" class="home" ng-click="active='home'">Home</a>
+		<a href="/placeorder" class="placeorder" ng-click="active='placeorder'">Place Order</a>
+		<a href="/checkstatus" class="projects" ng-click="active='projects'">Check Status</a>
+		<a href="/updateorder" class="services" ng-click="active='services'">Update Order</a>
+		<a href="/payorder" class="contact" ng-click="active='contact'">Pay</a>
 	</nav>
 
 	<!-- ng-show will show an element if the value in the quotes is truthful,
